# workflow_notifier

./: Cargo.toml  Dockerfile  README.md  workflow_notifier_template.yaml
src/: main.rs
