[package]
name = "workflow_notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
clap = { version = "4.0", features = ["derive"] }
